# NDKDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/come/live/ndkdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/head/: LogUtils.h
app/src/main/cpp/mediacodec/: H264Demux.cpp  H264Demux.h  MediaCodec.cpp  MediaCodec.h
app/src/main/cpp/model/: BaseMsgEntity.cpp  BaseMsgEntity.h  Cell.cpp  Cell.h
app/src/main/cpp/msgqueue/: Handler.cpp  Handler.h
app/src/main/cpp/struct/: BinaryTree.cpp  BinaryTree.h  LinkList.cpp  LinkList.h  LruCache.cpp  LruCache.h  MemPool.h  Memory.cpp  Memory.h  NginxMemPool.cpp  NginxMemPool.h  ObjPool.cpp  ObjPool.h  Person.cpp  Person.h  SmartPoint.cpp  SmartPoint.h
app/src/main/cpp/struct/queue/: FrameQueue.cpp  FrameQueue.h
app/src/main/cpp/utils/: Aircraft.cpp  Aircraft.h  ArrayTest.cpp  ArrayTest.h  BlockQueue.cpp  BlockQueue.h  Bomber.cpp  Bomber.h  JavaObjectMap.hpp  NDKStackUtils.cpp  NDKStackUtils.h  SafeQueue.cpp  SafeQueue.h  SocketMgr.cpp  SocketMgr.h  SortMgr.cpp  SortMgr.h  StackTest.cpp  StackTest.h  VideoFrame.cpp  VideoFrame.h  threadsafe_queue.cpp
app/src/main/java/come/live/ndkdemo/: App.java  BaseActivity.java  DataStructActivity.java  FFMpegCmdActivity.java  GameEditText.java  LogUtils.java  MainActivity.java  NativeTest.java  Person.java
app/src/main/java/come/live/ndkdemo/cache/: CacheActivity.java  CacheData.java  CacheMgr.java  DiskLruCache.java  StrictLineReader.java  Util.java
app/src/main/java/come/live/ndkdemo/core/: VideoEditor.java
app/src/main/res/drawable/: txt_select_selector.xml
app/src/main/res/layout/: activity_main.xml  layout_cache.xml  layout_data_struct.xml  layout_ffmpeg_cmd.xml
app/src/main/res/values/: styles.xml
app/src/test/java/come/live/ndkdemo/: ExampleUnitTest.java
ffmpeg-cmd/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/come/live/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt
player/src/main/cpp/head/utils/: LogUtils.h
player/src/main/cpp/jniCenter/: come_live_player.cpp
player/src/main/java/come/live/player/: MicroPlayer.java
player/src/test/java/come/live/player/: ExampleUnitTest.java
